fixed gaps and margins

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,8 @@ main {
 }
 
 .result-title {
-    font-weight: 700;
+    font-size: 16px;
+    font-weight: 600;
     color: hsl(241, 100%, 89%);
     margin-bottom: 20px;
 }
@@ -79,12 +80,12 @@ main {
 
     display: flex;
     flex-flow: column;
-    gap: 15px;
+    gap: 10px;
 }
 
 .summary-section h4{
-    font-size: 18px;
-    margin: 15px 0 0 0; 
+    font-size: 16px;
+    margin: 15px 0 5px 0; 
     font-weight: 700;
 }
 
@@ -184,8 +185,8 @@ article {
     text-decoration: none;
     color: white;
     background-color: hsl(224, 30%, 27%);
-    margin: 10px 0;
-    padding: 15px;
+    margin: 10px 0 0 0;
+    padding: 12px;
     border-radius: 40px;
 }
 
